--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/odontogram/odontogram.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/odontogram/odontogram.component.html
@@ -1,8 +1,9 @@
 <div style="margin: 40px;" fxLayout="column" fxLayoutGap="15px">
 
 
-	<div id="actions" fxLayout="row" fxLayoutAlign="end">
+	<div id="actions" fxLayout="row" fxLayoutGap="15px" fxLayoutAlign="end">
 		<button mat-stroked-button color="primary" class="uppercase" (click)="clearOdontogram()">Restablecer</button>
+		<button mat-raised-button color="primary" class="uppercase" (click)="openConsultationPopup()">Completar consulta</button>
 	</div>
 
 
