--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/odontology-consultation-dock-popup/odontology-consultation-dock-popup.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/odontology-consultation-dock-popup/odontology-consultation-dock-popup.component.scss
@@ -8,3 +8,20 @@
 	background-color: white;
 }
 
+mat-form-field {
+	width: 100%;
+}
+
+.margin-checkbox {
+	margin-bottom: 15px;
+}
+
+.margin-bottom {
+	margin-bottom: 3vh;
+}
+
+.recomendado {
+	color: lightgray;
+	font-size: 13px;
+	font-weight: lighter;
+}
