--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/odontology-consultation-dock-popup/odontology-consultation-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/odontology-consultation-dock-popup/odontology-consultation-dock-popup.component.html
@@ -46,6 +46,59 @@
 
 			</app-new-document-section>
 		</div>
+
+		<div id="allergies">
+			<app-new-document-section sectionTitle="odontologia.nueva-consulta.alergias.TITLE">
+
+				<ng-container concept-form>
+					<app-concepts-search
+						*ngIf="!allergiesNewConsultationService.getSnomedConcept() else allergiesForm"
+						[label]="'odontologia.nueva-consulta.alergias.ALLERGY'"
+						(search)="allergiesNewConsultationService.openSearchDialog($event)">
+					</app-concepts-search>
+					<ng-template #allergiesForm>
+						<form [formGroup]="allergiesNewConsultationService.getForm()"
+							  (ngSubmit)="allergiesNewConsultationService.addToList()">
+							<mat-form-field appearance="outline">
+								<mat-label [translate]="'odontologia.nueva-consulta.alergias.ALLERGY'">
+								</mat-label>
+								<input id="allergies_input" matInput type="text" formControlName="snomed" name="snomed"
+									   readonly matTooltip="{{allergiesNewConsultationService.getSnomedConcept().pt }}">
+								<button id="clear_allergies" mat-button matSuffix color="warn" mat-icon-button
+										(click)="allergiesNewConsultationService.resetForm()">
+									<mat-icon>close</mat-icon>
+								</button>
+							</mat-form-field>
+
+							<mat-form-field appearance="outline">
+								<mat-label [translate]="'odontologia.nueva-consulta.alergias.CRITICALITY'">
+								</mat-label>
+								<mat-select id="criticality_select" formControlName="criticality">
+									<mat-option *ngFor="let criticalityType of criticalityTypes" [value]="criticalityType.id">
+										{{criticalityType.display}}
+									</mat-option>
+								</mat-select>
+								<mat-error translate="forms.REQUIRED"></mat-error>
+							</mat-form-field>
+
+							<div align="end">
+								<button id="submit_allergies" class="uppercase" mat-raised-button color="primary"
+										type="submit">
+									<span class="uppercase"
+										  [translate]="'odontologia.nueva-consulta.alergias.ADD'"></span>
+								</button>
+							</div>
+						</form>
+					</ng-template>
+				</ng-container>
+
+				<app-document-section-table data-display [tableTitle]="'odontologia.nueva-consulta.alergias.table.TITLE'"
+								[columns]="allergiesNewConsultationService.getTableColumnConfig()"
+								[data]="allergiesNewConsultationService.getAlergias()">
+				</app-document-section-table>
+
+			</app-new-document-section>
+		</div>
 	</div>
 
 </app-dock-popup>
