--- a/front-end/apps/projects/hospital/src/app/modules/presentation/components/cell-templates/cell-templates.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/presentation/components/cell-templates/cell-templates.component.html
@@ -35,6 +35,24 @@
 	</ng-container>
 </ng-template>
 
+<ng-template #allergyCriticalityTemplate let-rowData="data" let-text="text" appCtrlTemplate="allergyCriticalityTemplate">
+	<ng-container *ngIf="rowData.criticalityId === 1">
+		<mat-label class="grayText">
+			{{text}}
+		</mat-label>
+	</ng-container>
+	<ng-container *ngIf="rowData.criticalityId === 2">
+		<mat-error>
+			{{text}}
+		</mat-error>
+	</ng-container>
+	<ng-container *ngIf="rowData.criticalityId === 3">
+		<mat-label>
+			{{text}}
+		</mat-label>
+	</ng-container>
+</ng-template>
+
 <ng-template #startAndEndDateTemplate let-rowData="data" appCtrlTemplate="startAndEndDateTemplate">
 	<div class="mat-small grayText">
 		<span translate="ambulatoria.paciente.nueva-consulta.problemas.FECHA_INICIO_PREFIJO"></span>
