--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/odontology-consultation-dock-popup/odontology-consultation-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/odontology-consultation-dock-popup/odontology-consultation-dock-popup.component.html
@@ -99,6 +99,67 @@
 
 			</app-new-document-section>
 		</div>
+
+		<div id="medications">
+
+			<app-new-document-section sectionTitle="odontologia.nueva-consulta.medicaciones.TITLE">
+				<div concept-form>
+					<app-concepts-search
+						*ngIf="!medicationsNewConsultationService.getSnomedConcept() else medicationForm"
+						[label]="'odontologia.nueva-consulta.medicaciones.CONCEPT_LABEL'"
+						(search)="medicationsNewConsultationService.openSearchDialog($event)">
+					</app-concepts-search>
+				</div>
+
+				<ng-template #medicationForm>
+					<form [formGroup]="medicationsNewConsultationService.getForm()"
+						  (ngSubmit)="medicationsNewConsultationService.addToList()">
+						<mat-form-field appearance="outline">
+							<mat-label [translate]="'odontologia.nueva-consulta.medicaciones.NOMBRE_MEDICACION'">
+							</mat-label>
+							<input matInput type="text" formControlName="snomed" name="snomed" readonly
+								   matTooltip="{{ medicationsNewConsultationService.getSnomedConcept().pt }}">
+							<button id="clear_medication" mat-button matSuffix color="warn" mat-icon-button
+									(click)="medicationsNewConsultationService.resetForm()">
+								<mat-icon>close</mat-icon>
+							</button>
+						</mat-form-field>
+
+						<mat-form-field appearance="outline">
+							<mat-label
+								[translate]="'odontologia.nueva-consulta.medicaciones.OBSERVACIONES'"></mat-label>
+							<textarea matInput type="text" id="observations" name="observaciones"
+									  formControlName="observaciones"
+									  placeholder="{{'odontologia.nueva-consulta.medicaciones.DESCRIPCION' | translate }}"
+							>
+							</textarea>
+							<mat-error *ngIf="hasError(medicationsNewConsultationService.getForm(), 'maxlength', 'observaciones')" translate="forms.MAX_LENGTH_ERROR"
+									   [translateParams]="{max: TEXT_AREA_MAX_LENGTH}">
+							</mat-error>
+						</mat-form-field>
+
+						<div class="margin-checkbox">
+							<mat-checkbox formControlName="suspendido">
+								<span [translate]="'odontologia.nueva-consulta.medicaciones.SUSPENDIDO'"></span>
+							</mat-checkbox>
+						</div>
+
+						<div align="end">
+							<button class="uppercase" mat-raised-button color="primary" type="submit">
+								<span [translate]="'internaciones.anamnesis.medicacion.ADD'"></span>
+							</button>
+						</div>
+					</form>
+				</ng-template>
+
+				<app-document-section-table data-display tableTitle="odontologia.nueva-consulta.medicaciones.TABLE_TITLE"
+											[columns]="medicationsNewConsultationService.getTableColumnConfig()"
+											[data]="medicationsNewConsultationService.getMedicaciones()">
+				</app-document-section-table>
+
+			</app-new-document-section>
+		</div>
+
 	</div>
 
 </app-dock-popup>
