--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/vacunas/vacunas.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/vacunas/vacunas.component.html
@@ -28,27 +28,28 @@
 			<app-summary-card [header]="vacunasSummary" [tooltip]="'historia-clinica.summary-card.vacunas.TOOLTIP'"
 				[canEdit]="['PROFESIONAL_DE_SALUD', 'ESPECIALISTA_MEDICO', 'ENFERMERO']" [editable]="true"
 				(openInNew)="openDialog()">
-				<ng-container *ngFor="let vacuna of vaccines; let i = index">
+				<ng-container *ngFor="let vaccine of vaccines; let i = index">
 					<div fxLayout="row" fxLayoutAlign="center center">
 						<div fxFlex="50%">
-							<div mat-line class="capitalize-first-letter"> {{vacuna.snomed.pt}}</div>
+							<div mat-line class="capitalize-first-letter"> {{vaccine.snomed.pt}}</div>
 						</div>
 						<div fxFlex="25%" fxLayoutAlign="center">
-							<ng-container *ngIf="vacuna.dose?.description else noInfo">
-								<strong class="dose">{{vacuna.dose?.description}}</strong>
+							<ng-container *ngIf="vaccine.dose?.description else noInfo">
+								<strong class="dose">{{vaccine.dose?.description}}</strong>
 							</ng-container>
 						</div>
 						<div fxFlex="20%" class="padding-to-align-chip">
-							<ng-container *ngIf="vacuna.administrationDate">
-								{{this.toFormatDate(vacuna.administrationDate)}}</ng-container>
+							<ng-container *ngIf="vaccine.administrationDate">
+								<span >{{vaccine.administrationDate | viewDate }}</span>
+							</ng-container>
 						</div>
 						<div fxFlex="5%">
-							<button *appHasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD']" mat-icon-button
+							<button *appHasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD', 'ENFERMERO']" mat-icon-button
 								[matMenuTriggerFor]="menu">
 								<mat-icon>more_vert</mat-icon>
 							</button>
 							<mat-menu #menu="matMenu">
-								<button mat-menu-item (click)="goToDetailsVaccine(vacuna)">
+								<button mat-menu-item (click)="goToDetailsVaccine(vaccine)">
 									<span [translate]="'ambulatoria.paciente.vacunas.DETAILS'"></span>
 								</button>
 							</mat-menu>
@@ -62,5 +63,5 @@
 </app-content>
 
 <ng-template #noInfo>
-	<snap class="not-info" [translate]="'ambulatoria.paciente.vacunas.details.not-info'"></snap>
+	<span class="no-info" [translate]="'ambulatoria.paciente.vacunas.details.NO-INFO'"></span>
 </ng-template>
