--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/detalle-vacuna/detalle-vacuna.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/detalle-vacuna/detalle-vacuna.component.html
@@ -1,32 +1,33 @@
 <div fxLayout="row" fxLayoutAlign="end" class="close">
-	<button mat-button [mat-dialog-close]="true" tabindex="-1">
+	<button mat-button [mat-dialog-close]>
 		<mat-icon>close</mat-icon>
 	</button>
 </div>
 
-<div mat-dialog-title fxLayout="row" fxLayoutAlign="space-between">
-	<div class="title">{{data.title}}</div>
+<div mat-dialog-title fxLayout="row">
+	<div class="title">{{data.vaccineTitleName}}</div>
 </div>
 
 <div mat-dialog-content fxLayoutAlign="start" fxLayout="column">
 
 	<mat-list class="mat-list">
 		<div class="mat-list-item">
-			<div fxFlex="33%" [translate]="'ambulatoria.paciente.vacunas.details.DOSE'"></div>
-			<div fxFlex="33%" [translate]="'ambulatoria.paciente.vacunas.details.DATE'"></div>
-			<div fxFlex="33%" [translate]="'ambulatoria.paciente.vacunas.details.lotNumber'"></div>
+			<span fxFlex="33%" [translate]="'ambulatoria.paciente.vacunas.details.DOSE'"></span>
+			<span fxFlex="33%" [translate]="'ambulatoria.paciente.vacunas.details.DATE'"></span>
+			<span fxFlex="33%" [translate]="'ambulatoria.paciente.vacunas.details.LOT_NUMBER'"></span>
 		</div>
 		<div  class="mat-values">
 			<div fxFlex="33%">
-				<ng-container *ngIf="data.dose else noInfo">
-					<strong class="dose">{{data.dose | uppercase}}</strong>
+				<ng-container *ngIf="data.appliedDoses else noInfo">
+					<strong class="appliedDoses">{{data.appliedDoses | uppercase}}</strong>
 				</ng-container>
 			</div>
 			<div fxFlex="33%">
-				<ng-container *ngIf="data.date else noInfo">{{this.toFormatDate(data.date)}}</ng-container>
+				<ng-container *ngIf="data.applicationDate else noInfo"><span >{{data.applicationDate | viewDate }}</span>
+				</ng-container>
 			</div>
 			<div fxFlex="33%" class="capitalize-first-letter">
-				<ng-container *ngIf="data.lot else noInfo">{{data.lot}}</ng-container>
+				<ng-container *ngIf="data.lotNumber else noInfo">{{data.lotNumber}}</ng-container>
 			</div>
 		</div>
 	</mat-list>
@@ -34,36 +35,39 @@
 	<mat-divider></mat-divider>
 
 	<div class="inst-prof-container" fxLayout="column">
-		<div class="sub-title" [translate]="'ambulatoria.paciente.vacunas.details.institution'"></div>
-		<ng-container *ngIf="data.institution else noInfo">{{data.institution}}</ng-container>
-		<div class="sub-title" [translate]="'ambulatoria.paciente.vacunas.details.professional'"></div>
-		<ng-container *ngIf="data.professional else noInfo" class="inst-prof-values"><div> Dr. {{data.professional}}</div></ng-container>
+		<span class="sub-title" [translate]="'ambulatoria.paciente.vacunas.details.INSTITUTION'"></span>
+		<ng-container *ngIf="data.institutionName else noInfo">{{data.institutionName}}</ng-container>
+		<span class="sub-title" [translate]="'ambulatoria.paciente.vacunas.details.PROFESSIONAL'"></span>
+		<ng-container *ngIf="data.ProfessionalCompleteName else noInfo" class="inst-prof-values"><div> Dr. {{data.ProfessionalCompleteName}}</div></ng-container>
 	</div>
 
 	<mat-divider></mat-divider>
 
 	<mat-list class="mat-list">
 		<div class="mat-list-item">
-			<div fxFlex="50%"  [translate]="'ambulatoria.paciente.vacunas.details.condition_motive'"></div>
-			<div fxFlex="50%"  [translate]="'ambulatoria.paciente.vacunas.details.scheme'"></div>
+			<span fxFlex="50%"  [translate]="'ambulatoria.paciente.vacunas.details.CONDITION_MOTIVE'"></span>
+			<span fxFlex="50%"  [translate]="'ambulatoria.paciente.vacunas.details.SCHEME'"></span>
 		</div>
 		<div class="mat-values">
 			<div fxFlex="50%" class="capitalize-first-letter">
-				<ng-container *ngIf="data.terms else noInfo">{{data.terms}}</ng-container>
+				<ng-container *ngIf="data.vaccineConditinDescription else noInfo">{{data.vaccineConditinDescription}}</ng-container>
 			</div>
 			<div fxFlex="50%" class="capitalize-first-letter">
-				<ng-container *ngIf="data.scheme else noInfo">{{data.scheme}}</ng-container>
+				<ng-container *ngIf="data.vaccinationSchemeDescription else noInfo">{{data.vaccinationSchemeDescription}}</ng-container>
 			</div>
 		</div>
 	</mat-list>
 
 	<div class="observations">
 		<div fxFlex="100%" class="capitalize-first-letter">
-			<ng-container *ngIf="data.observations else noInfo">{{data.observations}}</ng-container>
+			<ng-container *ngIf="data.vaccineObservations else noObs">{{data.vaccineObservations}}</ng-container>
 		</div>
 	</div>
 </div>
 
 <ng-template #noInfo>
-	<snap class="not-info" [translate]="'ambulatoria.paciente.vacunas.details.not-info'"></snap>
+	<span class="no-info" [translate]="'ambulatoria.paciente.vacunas.details.NO-INFO'"></span>
+</ng-template>
+<ng-template #noObs>
+	<span class="no-info" [translate]="'ambulatoria.paciente.vacunas.details.NO-OBS'"></span>
 </ng-template>
