tg-4585 Agrega pop-up para descargar informes desde perfil del paciente

--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/profile/profile.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/profile/profile.component.html
@@ -20,7 +20,7 @@
 					</ng-container>
 				</div>
 				<div content *appHasRole="['ADMINISTRATIVO']" >
-					<button mat-stroked-button color="primary" class="reports" *ngIf="downloadReportIsEnabled">
+					<button mat-stroked-button color="primary" class="reports" *ngIf="downloadReportIsEnabled" (click)="reports()">
 						<span class="uppercase">INFORMES</span>
 					</button>
 				</div>
