tg-4651.  Encabezados en la tabla de vacunas.

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/vacunas/vacunas.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/vacunas/vacunas.component.scss
@@ -6,5 +6,13 @@
 }
 
 .no-info {
-	color: #a8a8a8;
+	padding: 20px 5px;
+    text-align: center;
+    font-weight: bold;
+    color: #A8A8A8;}
+
+.vaccines-table-header-text {
+	color: rgba(0, 0, 0, 0.54);
+	font-size: 12px;
+	font-weight: 500;
 }
